--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "qanda-api",
   "version": "1.0.0",
   "description": "This is the API for the QandA portion of the website.",
-  "main": "/src/index.js",
+  "main": "/server/index.js",
   "scripts": {
+    "start": "nodemon server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,6 +23,7 @@
     "express": "^4.17.3",
     "express-promise-router": "^4.1.1",
     "mongoose": "^6.3.1",
+    "nodemon": "^2.0.15",
     "pg": "^8.7.3",
     "postgres": "^3.0.6"
   }
